# vision-based-avoidance

./: .gitignore  CMakeLists.txt  README.md  package.xml
dnn/: README.md
dnn/scripts/: avoidance_framework.py  clean_file_locations.py  create_datasets_astar.py  dagger_selection.py  dagger_selection_mpc.py  data_to_classify.py  dnn_architecture.py  dnn_path_policy.py  moving_goal_publisher.py  test_DNN.py  train_DNN.py  train_dnn.py
dnn/scripts/cleanup_scripts/: clean_data.py  data_relative_regression.py  read_bag.py  rename_files.py
dnn/scripts/extras/: dnn_path_policy_mpc.py  train_DNN_BACKUP.py  train_DNN_MPC.py  train_DNN_for_classify.py
launch/: obstacle_avoidance_with_joy.launch  octomap.launch
rviz/: DJI_collins.rviz  vi_sensor.rviz
scripts/: Astar_3d.py  astar2d.py  astar_data_collection.py  astar_data_collection_BACKUP.py  dagger.py  dagger_main.py  data_collection_waypoints_creator.py  data_test.txt  dnn_path_policy.py  emergency_reaction.py  gym_test.py  moving_goal_publisher.py  mpc_data_collection.py  path_planning.py  pointcloud_to_array.py  waypoint_publisher.py  x_-2_2_y_2_2_990pts.txt  x_-3_3_y_-3_2_4900pts.txt
scripts/extras/: x_5_5_y_4_4_7500pts.txt
worlds/: hallway_obstacle.sdf  obstacle.world
